--- a/roles/crc/vars/main.yml
+++ b/roles/crc/vars/main.yml
@@ -1,3 +1,4 @@
 ---
-latest_release_url_base: https://developers.redhat.com/content-gateway/rest/mirror/pub/openshift-v4/clients/crc/latest/
+crc_releases_url_base: https://developers.redhat.com/content-gateway/rest/mirror/pub/openshift-v4/clients/crc/
+latest_release_url_base: "{{ crc_releases_url_base }}/latest/"
 installed_crc_path: "{{ansible_facts.env.HOME}}/.crc/bin/crc"
