add haproxy config, begin tagging

--- a/roles/crc/tasks/main.yml
+++ b/roles/crc/tasks/main.yml
@@ -1,25 +1,15 @@
 ---
-- name: check local version
-  import_tasks: check_local_version.yml
+- name: install
+  include_tasks: installation.yml
+  tags: [install]
 
-- name: install if entirely absent
-  when: local_crc_version is not defined
-  set_fact:
-    should_install: yes
+- name: set up haproxy config
+  copy:
+    backup: yes
+    src: haproxy.cfg
+    dest: /etc/haproxy.cfg
+  become: true
+  tags: [remote-reachable]
 
-- name: install if local version is not the target version
-  when: 
-    - local_crc_version is defined
-    - target_crc_version != "latest"
-  set_fact:
-    should_install: local_crc_version is version(target_version, operator='ne')
-
-- name: check against latest version
-  when:
-    - local_crc_version is defined
-    - target_crc_version == "latest"
-  include_tasks: check_latest_version.yml
-
-- name: install if needed
-  include_tasks: install.yml
-  when: should_install
+# TODO: not enabling systemd service just yet because
+# we'll probably want the `crc-runner`.
