--- a/roles/crc/tasks/main.yml
+++ b/roles/crc/tasks/main.yml
@@ -15,6 +15,8 @@
   ansible.posix.firewalld:
     zone: "{{ firewall_zone }}"
     service: "{{ item }}"
+    immediate: true
+    permanent: true
     state: enabled
   loop:
     - kube-apiserver
